--- a/03-making-changes/03-making-changes.tex
+++ b/03-making-changes/03-making-changes.tex
@@ -33,7 +33,7 @@
   {We found that \ul{33\%} of the patches makes it into a Linux release, and that most of them need \ul{3 to 6 months} for this.}
   {jiang2013will}
 
-\lnThought[bugayenko2020blog0729]{Make small pull requests.}
+\lnThought{Make small pull requests~\citep{bugayenko2020blog0729}.}
 
 \lnQuote
   [\nospell{Dabbish Laura}]
@@ -59,7 +59,7 @@
   {A correlation between \ul{change size} and \ul{review quality} is acknowledged by Google and developers are strongly encouraged to make small, incremental changes (with the exception of large deletions and automated refactoring).}
   {sadowski2018modern}
 
-\lnThought[bugayenko2020blog0729]{Don't group your changes.}
+\lnThought{Don't group your changes~\citep{bugayenko2020blog0729}.}
 
 \lnQuote
   [\nospell{Carolyn D. Egelman}]
@@ -132,7 +132,7 @@ Valence, also known as hedonic tone, is a characteristic of emotions that determ
   {Unexpectedly, quality \ul{flaws} measured by PMD turned out not to affect the acceptance of a pull request at all. As suggested by other works, other factors such as the \ul{reputation} of the maintainer and the \ul{importance} of the delivered feature might be more important than other qualities in terms of pull request acceptance.}
   {lenarduzzi2021does}
 
-\lnThought[bugayenko2022blog0804]{Commit the code and its tests in different pull requests.}
+\lnThought{Commit the code and its tests in different pull requests~\citep{bugayenko2022blog0804}.}
 
 \pptBanner{Test first, fix next}
 \begin{pptWide}{2}
