--- a/01-debating/01-debating.tex
+++ b/01-debating/01-debating.tex
@@ -27,7 +27,7 @@
 
 \plush{\lnTitlePage{1}{8}{jYeZuaLt7nI}}
 
-\lnThought[bugayenko2015blog1222]{Open source must be \ul{the only} way for you to write code.}
+\lnThought{Open source must be \ul{the only} way for you to write code~\citep{bugayenko2015blog1222}.}
 
 \lnQuote
   [\nospell{Naveen Raman}]
@@ -67,7 +67,7 @@
   {Most \ul{free} software projects \ul{fail}.}
   {fogel2005producing}
 
-\lnThought[bugayenko2020blog0729]{Always \ul{start} your message with a nickname of the person who you are talking to.}
+\lnThought{Always \ul{start} your message with a nickname of the person who you are talking to~\citep{bugayenko2020blog0729}.}
 
 \lnPitch{
   \begin{multicols}{2}
@@ -82,7 +82,7 @@
 
 \lnThought{In an argument, provide \ul{links} that support your point of view.}
 
-\lnThought[bugayenko2020blog0729]{Beautify your profile, start with an anthropomorphic avatar.}
+\lnThought{Beautify your profile, start with an anthropomorphic avatar~\citep{bugayenko2020blog0729}.}
 
 \lnQuote
   [\nospell{Kristine Nowak}]
@@ -116,7 +116,7 @@
 
 \lnPitch{\includegraphics[width=.75\linewidth]{monica.png}}
 
-\lnThought[bugayenko2014blog1007]{Stay in the ticket, don't escape to Telegram, Slack, or an office debate.}
+\lnThought{Stay in the ticket, don't escape to Telegram, Slack, or an office debate~\citep{bugayenko2014blog1007}.}
 
 \lnQuote
   [Ben Balter]
@@ -148,7 +148,7 @@
   {Collaborative software development through GitHub repositories frequently relies on bot accounts to automate repetitive and error-prone tasks. This highlights the need to have accurate and efficient bot identification tools.}
   {chidambaram2024rabbit}
 
-\lnThought[bugayenko2020blog0729]{Be polite, especially when you are angry or disagree.}
+\lnThought{Be polite, especially when you are angry or disagree~\citep{bugayenko2020blog0729}.}
 
 \lnQuote
   [\nospell{Xuan Lu}]
