--- a/04-reviewing-changes/04-reviewing-changes.tex
+++ b/04-reviewing-changes/04-reviewing-changes.tex
@@ -33,7 +33,7 @@
   {We should remember that \ul{pre-integration} review grew out of an open-source context where contributions appear impromptu from \ul{weakly connected} developers.}
   {fowler2006}
 
-\lnThought[bugayenko2015blog0209]{Raise issues, don't resolve them!}
+\lnThought{Raise issues, don't resolve them!~\citep{bugayenko2015blog0209}}
 
 \lnQuote
   [\nospell{Michael Fagan}]
@@ -88,9 +88,9 @@
   \includegraphics[width=.6\linewidth]{tenure.png}
   \lnSource{sadowski2018modern}}
 
-\lnThought[bugayenko2019blog1203]{Don't run the code in the branch}
+\lnThought{Don't run the code in the branch~\citep{bugayenko2019blog1203}.}
 
-\lnThought[bugayenko2015blog0622]{Reject it, if it's too big}
+\lnThought{Reject it, if it's too big~\citep{bugayenko2015blog0622}.}
 
 \lnQuote
   {eric-raymond}
@@ -118,12 +118,12 @@
   \lnSource{rigby2013convergent}
   \end{multicols}}
 
-\lnThought[bugayenko2015blog0622]{Reject it, if it lowers code coverage}
+\lnThought{Reject it, if it lowers code coverage~\citep{bugayenko2015blog0622}.}
 
 \lnPitch{\includegraphics[width=.9\linewidth]{codecov.png}
 \par{\small\url{https://docs.codecov.com/docs/pull-request-comments}\par}}
 
-\lnThought[bugayenko2015blog0622]{Reject it, if it doesn't reproduce a bug}
+\lnThought{Reject it, if it doesn't reproduce a bug~\citep{bugayenko2015blog0622}.}
 
 \lnThought{Rely on the CI status, but not too much}
 
