--- a/05-setting-guidelines/05-setting-guidelines.tex
+++ b/05-setting-guidelines/05-setting-guidelines.tex
@@ -73,7 +73,7 @@
 \lnPitch{\includegraphics[width=.7\linewidth]{licenses.png}
   \lnSource{github2015licenses}}
 
-\lnThought[bugayenko2019blog0423]{Make the \ff{README.md} file attractive}
+\lnThought{Make the \ff{README.md} file attractive~\citep{bugayenko2019blog0423}.}
 
 \plush{\pptBanner{Mandatory sections of \ff{README.md}:}
   \begin{itemize}\setlength\itemsep{0em}
@@ -111,7 +111,7 @@
   {The frequency/number of readme \ul{updates} and the number of \ul{lists} and \ul{links} positively correlate with the likelihood of a repository being popular.}
   {wang2023study}
 
-\lnThought[bugayenko2014blog0721]{Make the \ff{master} branch read-only}
+\lnThought{Make the \ff{master} branch read-only~\citep{bugayenko2014blog0721}.}
 
 \lnThought{Put \ff{CODE\_OF\_CONDUCT.md} file to your repository... not}
 
