--- a/06-integrating/06-integrating.tex
+++ b/06-integrating/06-integrating.tex
@@ -100,7 +100,7 @@
 
 \lnThought{Enable @renovate or @dependabot}
 
-\lnThought[bugayenko2023blog0822]{Discriminate tests as fast and slow}
+\lnThought{Discriminate tests as fast and slow~\citep{bugayenko2023blog0822}.}
 
 \lnThought{Use caching in GitHub Action}
 
