--- a/02-reporting-bugs/02-reporting-bugs.tex
+++ b/02-reporting-bugs/02-reporting-bugs.tex
@@ -84,7 +84,7 @@ More about it by \citet{bugayenko2018blog0206}.}
   {In a manual examination of more than 7,000 issue reports from five open-source projects, we found 33.8\% of all bug reports to be \ul{misclassified} threatening bug prediction models, confusing \ul{bugs} and \ul{features}: On average, 39\% of files marked as defective actually never had a bug.}
   {herzig2013s}
 
-\lnThought[bugayenko2018blog0724]{Reward yourself for each reported bug}
+\lnThought{Reward yourself for each reported bug~\citep{bugayenko2018blog0724}.}
 
 \lnThought{Report strictly one problem per ticket}
 
@@ -94,7 +94,7 @@ More about it by \citet{bugayenko2018blog0206}.}
   {People play different roles as they interact with reports in a bug repository. The person who submits the report is the \ul{reporter} or the \ul{submitter} of the report. The \ul{triager} is the person who decides if the report is meaningful and who assigns responsibility of the report to a developer. The one that resolves the report is the \ul{resolver}. A person that contributes a fix for a bug is called a \ul{contributor}.}
   {anvik2006should}
 
-\lnThought[bugayenko2018blog0424]{Exaggerate for effect}
+\lnThought{Exaggerate for effect~\citep{bugayenko2018blog0424}.}
 
 \lnPitch{\pptBanner{Do This, While Reporting Bugs:}
 \begin{itemize}\setlength\itemsep{0em}
@@ -109,7 +109,7 @@ More about it by \citet{bugayenko2018blog0206}.}
 \end{itemize}
 More about it by \citet{bugayenko2018blog0424}.}
 
-\lnThought[bugayenko2022blog0329]{Simplify until it's impossible to simplify any further}
+\lnThought{Simplify until it's impossible to simplify any further~\citep{bugayenko2022blog0329}.}
 
 \pptBanner{Bugs Occam's Razor}
 \begin{pptWide}{2}
@@ -143,11 +143,11 @@ Most probably, the subtracting operator doesn't do anything --- this is the bug.
 \end{pptWide}
 \plush{}
 
-\lnThought[bugayenko2014blog1124]{Be a prosecutor, not an advocate}
+\lnThought{Be a prosecutor, not an advocate~\citep{bugayenko2014blog1124}.}
 
-\lnThought[bugayenko2014blog1124]{Don't give up until some changes are made to the code base}
+\lnThought{Don't give up until some changes are made to the code base~\citep{bugayenko2014blog1124}.}
 
-\lnThought[bugayenko2023blog0725]{Prefer a disabled test in lieu of a bug report}
+\lnThought{Prefer a disabled test in lieu of a bug report~\citep{bugayenko2023blog0725}.}
 
 \pptBanner{Why not?}
 \begin{pptWide}{2}
