--- a/00-syllabus/00-syllabus.tex
+++ b/00-syllabus/00-syllabus.tex
@@ -47,6 +47,8 @@ In the course, students will learn how to interact with other programmers in ope
 \textbf{What is the goal?}\\
 This course introduces best practices for GitHub-based software development, which may eventually help students gain 10,000 stars in their own repositories.
 
+\floatstyle{plain}
+\restylefloat{figure}
 \begin{wrapfigure}{r}{1.2in}%
 \raggedleft%
 \includegraphics[width=1.2in]{photo.jpg}%
