--- a/03-making-changes/03-making-changes.tex
+++ b/03-making-changes/03-making-changes.tex
@@ -42,6 +42,12 @@
   {tsay2014influence}
 
 \lnQuote
+  [Georgios Gousios]
+  {georgios-gousios}
+  {We examined 291 carefully selected Ruby, Python, Java and Scala projects (in total, 166,884 pull requests)... The number of \ul{total lines} changed by pull requests is on average less than 500 (95\% percentile: \textbf{1227}, 90\% percentile: 497, 80\% percentile: 168) with a median number of 20.}
+  {gousios2014exploratory}
+
+\lnQuote
   [\nospell{Yue Yu}]
   {yue-yu}
   {Our preliminary models show that pull request review latency is complex, and depends on many predictors. Naturally, the size of the pull request matters: the shorter it is the faster it will be reviewed.}
