--- a/04-reviewing-changes/04-reviewing-changes.tex
+++ b/04-reviewing-changes/04-reviewing-changes.tex
@@ -33,6 +33,12 @@
   {We should remember that \ul{pre-integration} review grew out of an open-source context where contributions appear impromptu from \ul{weakly connected} developers.}
   {fowler2006}
 
+\lnQuote
+  [James Whittaker]
+  {james-whittaker}
+  {Google centers its development process around code reviews. There is far more \ul{fanfare} about reviewing code than there is about writing it.}
+  {whittaker2012google}
+
 \lnThought{Raise issues, don't resolve them!~\citep{bugayenko2015blog0209}}
 
 \lnQuote
