--- a/03-making-changes/03-making-changes.tex
+++ b/03-making-changes/03-making-changes.tex
@@ -33,6 +33,10 @@
   {We found that \ul{33\%} of the patches makes it into a Linux release, and that most of them need \ul{3 to 6 months} for this.}
   {jiang2013will}
 
+\lnPitch{
+  \includegraphics[width=.9\linewidth]{reasons.png}
+  \lnSource{khatoonabadi2023wasted}}
+
 \lnThought{Make small pull requests~\citep{bugayenko2020blog0729}.}
 
 \lnQuote
@@ -82,7 +86,7 @@
   {ortu2020you}
 
 \plush{\pptBanner{What is ``valence''?}
-Valence, also known as hedonic tone, is a characteristic of emotions that determines their emotional affect (intrinsic appeal or repulsion). Positive valence corresponds to the "goodness" or attractiveness of an object, event, or situation, making it appealing or desirable. Conversely, negative valence relates to ``badness'' or averseness, rendering something unappealing or undesirable. --- \href{https://en.wikipedia.org/wiki/Valence_(psychology)}{Wikipedia}}
+  Valence, also known as hedonic tone, is a characteristic of emotions that determines their emotional affect (intrinsic appeal or repulsion). Positive valence corresponds to the "goodness" or attractiveness of an object, event, or situation, making it appealing or desirable. Conversely, negative valence relates to ``badness'' or averseness, rendering something unappealing or undesirable. --- \href{https://en.wikipedia.org/wiki/Valence_(psychology)}{Wikipedia}}
 
 \lnQuote
   [\nospell{Rahul Iyer}]
