--- a/02-reporting-bugs/02-reporting-bugs.tex
+++ b/02-reporting-bugs/02-reporting-bugs.tex
@@ -53,6 +53,11 @@
   {hetzel1993complete}
 
 \lnQuote
+  {cem-kaner}
+  {Different people have different expectations of a product, but if a legitimate stakeholder is disappointed by the product and feels that it's less valuable because of something that it does or doesn't do, she should write that up as a bug report.}
+  {kaner2002lessons}
+
+\lnQuote
   [\nospell{Myers, Glenford J.}]
   {glenford-myers}
   {You cannot test a program to guarantee that it is error free... It is impractical, often impossible, to find \ul{all} the errors in a program.}
