--- a/02-reporting-bugs/02-reporting-bugs.tex
+++ b/02-reporting-bugs/02-reporting-bugs.tex
@@ -80,7 +80,7 @@ More about it by \citet{bugayenko2018blog0206}.}
 \lnQuote
   [\nospell{Reis Christian}]
   {reis-christian}
-  {Though it commonly has a prejorative connotation, in the Mozilla Project the term \textbf{bug} is used to refer to any field request for modification in the software, be it an \ul{actual} defect, an enhancement, or a change in functionality. (``bug-driven development'')}
+  {Though it commonly has a prejorative connotation, in the Mozilla Project the term \textbf{bug} is used to refer to any field request for modification in the software, be it an \ul{actual} defect, an enhancement, or a change in functionality (``bug-driven development'').}
   {reis2002overview}
 
 \lnQuote
