--- a/02-reporting-bugs/02-reporting-bugs.tex
+++ b/02-reporting-bugs/02-reporting-bugs.tex
@@ -53,6 +53,7 @@
   {hetzel1993complete}
 
 \lnQuote
+  [Cem Kaner]
   {cem-kaner}
   {Different people have different expectations of a product, but if a legitimate stakeholder is disappointed by the product and feels that it's less valuable because of something that it does or doesn't do, she should write that up as a bug report.}
   {kaner2002lessons}
@@ -92,6 +93,12 @@ More about it by \citet{bugayenko2018blog0206}.}
 \lnThought{Reward yourself for each reported bug~\citep{bugayenko2018blog0724}.}
 
 \lnThought{Report strictly one problem per ticket}
+
+\lnQuote
+  [Cem Kaner]
+  {cem-kaner}
+  {If you write a report that has multiple bugs on it, some of them will probably never be fixed.}
+  {kaner2002lessons}
 
 \lnQuote
   [\nospell{John Anvik}]
