--- a/02-reporting-bugs/02-reporting-bugs.tex
+++ b/02-reporting-bugs/02-reporting-bugs.tex
@@ -95,8 +95,8 @@ More about it by \citet{bugayenko2018blog0206}.}
 \lnThought{Report strictly one problem per ticket}
 
 \lnQuote
-  [Cem Kaner]
-  {cem-kaner}
+  [James Bach]
+  {james-bach}
   {If you write a report that has multiple bugs on it, some of them will probably never be fixed.}
   {kaner2002lessons}
 
