--- a/02-reporting-bugs/02-reporting-bugs.tex
+++ b/02-reporting-bugs/02-reporting-bugs.tex
@@ -159,6 +159,12 @@ Most probably, the subtracting operator doesn't do anything --- this is the bug.
 
 \lnThought{Don't give up until some changes are made to the code base~\citep{bugayenko2014blog1124}.}
 
+\lnQuote
+  [Bret Pettichord]
+  {bret-pettichord}
+  {No bug should be marked as closed unless it has been reviewed and closed by a tester.}
+  {kaner2002lessons}
+
 \lnThought{Prefer a disabled test in lieu of a bug report~\citep{bugayenko2023blog0725}.}
 
 \pptBanner{Why not?}
