--- a/02-reporting-bugs/02-reporting-bugs.tex
+++ b/02-reporting-bugs/02-reporting-bugs.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Reporting Bugs}
 \begin{document}
 
-\plush{\lnTitlePage{2}{8}{nLcnE4N3Nz4}}
+\lnTitlePage{2}{8}{nLcnE4N3Nz4}
 
 \lnQuote
   [\nospell{Joel Spolsky}]
