--- a/03-making-changes/03-making-changes.tex
+++ b/03-making-changes/03-making-changes.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Making Changes}
 \begin{document}
 
-\plush{\lnTitlePage{3}{8}{D6CUW9eZ5yk}}
+\lnTitlePage{3}{8}{D6CUW9eZ5yk}
 
 \lnQuote
   [\nospell{\nospell{Bram Adams}}]
