--- a/04-reviewing-changes/04-reviewing-changes.tex
+++ b/04-reviewing-changes/04-reviewing-changes.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Reviewing Changes}
 \begin{document}
 
-\plush{\lnTitlePage{4}{8}{TJ83ePwyH_A}}
+\lnTitlePage{4}{8}{TJ83ePwyH_A}
 
 \lnQuote
   [\nospell{\nospell{Martin Fowler}}]
