--- a/05-setting-guidelines/05-setting-guidelines.tex
+++ b/05-setting-guidelines/05-setting-guidelines.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Setting Guidelines}
 \begin{document}
 
-\plush{\lnTitlePage{5}{8}{mWi2S5FJiJ4}}
+\lnTitlePage{5}{8}{mWi2S5FJiJ4}
 
 \lnThought{Have \ff{LICENSE.txt} file with an MIT license in your repository}
 
