--- a/06-integrating/06-integrating.tex
+++ b/06-integrating/06-integrating.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Integrating}
 \begin{document}
 
-\plush{\lnTitlePage{6}{8}{iyJ4wiCb9xM}}
+\lnTitlePage{6}{8}{iyJ4wiCb9xM}
 
 \lnThought{Setup continuous integration in order to prove that your product works}
 
