--- a/07-releasing/07-releasing.tex
+++ b/07-releasing/07-releasing.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Releasing}
 \begin{document}
 
-\plush{\lnTitlePage{7}{8}{VTsbvZSMwYE}}
+\lnTitlePage{7}{8}{VTsbvZSMwYE}
 
 \lnQuote
   [\nospell{Andre Van Der Hoek}]
