--- a/08-gaining-popularity/08-gaining-popularity.tex
+++ b/08-gaining-popularity/08-gaining-popularity.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Gaining Popularity}
 \begin{document}
 
-\plush{\lnTitlePage{8}{8}{_qrTcAv7ia8}}
+\lnTitlePage{8}{8}{_qrTcAv7ia8}
 
 \lnPitch{
   \pptBanner{A quick recap of the previous lectures:}
