--- a/01-debating/01-debating.tex
+++ b/01-debating/01-debating.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Debating While Coding}
 \begin{document}
 
-\plush{\lnTitlePage{1}{8}{jYeZuaLt7nI}}
+\lnTitlePage{1}{8}{jYeZuaLt7nI}
 
 \lnThought{Open source must be \ul{the only} way for you to write code~\citep{bugayenko2015blog1222}.}
 
@@ -57,7 +57,7 @@
 \lnQuote
   [\nospell{Isabella Ferreira}]
   {isabella-ferreira}
-  {We conducted a qualitative analysis on 1,545 emails from the Linux Kernel Mailing List that were associated with rejected changes. We found that \ul{more than half} (67\%) of the non-technical emails included uncivil features. Particularly, frustration, name calling, and impatience are the most frequent features in uncivil emails. }
+  {We conducted a qualitative analysis on 1,545 emails from the Linux Kernel Mailing List that were associated with rejected changes. We found that \ul{more than half} (67\%) of the non-technical emails included uncivil features. Particularly, frustration, name calling, and impatience are the most frequent features in uncivil emails.}
   {ferreira2021shut}
 
 \lnPitch{\includegraphics[width=.95\linewidth]{linus-email.png}}
