--- a/08-gaining-popularity/08-gaining-popularity.tex
+++ b/08-gaining-popularity/08-gaining-popularity.tex
@@ -73,6 +73,12 @@
   ``Popularity of the project (in terms of stars), time to review pull requests, and project characteristics like age and programming languages are the factors that best explain the newcomers' growth patterns. In addition, GitHub recommended community standards have a lower influence on the observed growth patterns.''
   \end{multicols}}
 
+\lnQuote
+  [Burak Rurhan]
+  {burak-turhan}
+  {We find that unit tested projects have positive correlation with the open-source project metrics and have a higher acceptance rate of pull requests.}
+  {wang2024beyond}
+
 \lnThought{Put some badges.}
 
 \lnPitch{
