--- a/03-making-changes/03-making-changes.tex
+++ b/03-making-changes/03-making-changes.tex
@@ -98,8 +98,9 @@
 
 \lnThought{Mostly explain ``why'' you make changes, not ``what'' you change}
 
-\lnPitch{\includegraphics[width=.9\linewidth]{quality-of-prs.png}
-\lnSource{liu2019automatic}}
+\lnPitch{
+  \includegraphics[width=.9\linewidth]{quality-of-prs.png}
+  \lnSource{liu2019automatic}}
 
 \lnPitch{
   \begin{multicols}{2}
